BookComponent, ngFor, Property Bindings

--- a/book-rating/src/app/dashboard/dashboard.component.html
+++ b/book-rating/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-{{ books }}
+<br-book *ngFor="let b of books" [book]="b"></br-book>
+
+
+<strong>Anzahl Bücher:</strong> {{ books.length ? books.length : 'Nö' }}
+
