--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -11,5 +11,8 @@
     <p>
       {{ book.description }}
     </p>
+
+    <button type="button" class="btn btn-success mr-2" (click)="doRateUp()"> + </button>
+    <button type="button" class="btn btn-danger mr-2" (click)="doRateDown()"> – </button>
   </div>
 </div>
