--- a/book-rating/src/app/books/dashboard/dashboard.component.html
+++ b/book-rating/src/app/books/dashboard/dashboard.component.html
@@ -1,8 +1,13 @@
 <br-book
   *ngFor="let b of books"
-  (rateUp)="rateUp($event)"
-  (rateDown)="rateDown($event)"
+  (rateUp)="onRateUp($event)"
+  (rateDown)="onRateDown($event)"
   [book]="b"></br-book>
 
 <strong>Anzahl Bücher:</strong> {{ books.length }}
+
+<button type="button" (click)="isVisible = !isVisible">Toggle</button>
+<div *ngIf="isVisible">
+  Ist sichtbar!
+</div>
 
