--- a/book-rating/src/app/app.component.html
+++ b/book-rating/src/app/app.component.html
@@ -1,9 +1,5 @@
 <div class="container">
   <h1>{{ title }}</h1>
 
-  <br-dashboard></br-dashboard>
+  <router-outlet></router-outlet>
 </div>
-
-
-
-<!-- ng g c dashboard -->
