--- a/book-rating/src/app/books/book/book.component.html
+++ b/book-rating/src/app/books/book/book.component.html
@@ -14,6 +14,8 @@
 
     <button type="button" class="btn btn-success mr-2" (click)="doRateUp()"> + </button>
     <button type="button" class="btn btn-danger mr-2" (click)="doRateDown()"> – </button>
+
+    <a [routerLink]="['/books', book.isbn]">Details</a>
   </div>
 </div>
 
