--- a/rxjs-playground/src/app/exercises/game-score/game-score.component.html
+++ b/rxjs-playground/src/app/exercises/game-score/game-score.component.html
@@ -22,7 +22,7 @@
   </div>
   <div class="col-6 text-center">
     <h3>Final Score</h3>
-    <div style="font-size: 70pt">{{ finalScore || '–' }}</div>
+    <div style="font-size: 70pt">{{ finalScore }}</div>
   </div>
 </div>
 
